# slay-all-the-spires

./: .gitignore  README.md  agent_design.md  config.yaml  pyproject.toml  run_agent.sh  sts_agent_architecture.md  sts_agent_observability.md
.claude/: CLAUDE.md  settings.local.json
data/: run_summaries.jsonl
data/logs/: decisions_20260310_2248.jsonl  decisions_20260310_2252.jsonl  decisions_20260310_2312.jsonl  decisions_20260310_2314.jsonl  decisions_20260311_1749.jsonl  decisions_20260311_1918.jsonl  decisions_20260311_1924.jsonl  decisions_20260311_1943.jsonl  decisions_20260311_2029.jsonl  decisions_20260311_2126.jsonl  decisions_20260311_2132.jsonl  run_analysis.txt
principles/: combat.md  deckbuilding.md  defect.md  ironclad.md  pathing.md  system.md  the_silent.md  watcher.md
src/sts_agent/: card_db.py  llm_client.py  main.py  models.py  monster_db.py  power_db.py  principles.py  prompt_tuner.py  relic_db.py  synergy_db.py  system_prompts.py
src/sts_agent/agent/: agent.py  (+5 more)
system_prompts/: combat.md  initial_plan.md  revise_plan.md  strategic_choose.md  tactical_choose.md
tests/: conftest.py  test_agent.py  test_card_db.py  test_combat_eval.py  test_combat_fallback.py  test_combat_planner.py  test_controllers.py  test_derivations.py  test_evaluators.py  test_experience_store.py  test_insight_generator.py  test_integration.py  test_journal.py  test_lesson_store.py  test_models.py  test_monster_db.py  test_power_db.py  test_principles.py  test_reducers.py  test_relic_db.py  test_run_state.py  test_simulator.py  test_state_store.py  test_sts1_comm.py
(+37 files in other folders)
