[project]
name = "slay-all-the-spires"
version = "0.1.0"
description = "LLM-powered agent that plays Slay the Spire autonomously"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pyyaml>=6.0",
    "spirecomm @ git+https://github.com/ForgottenArbiter/spirecomm.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sts_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
